--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -15,7 +15,7 @@
     <div class="col-xs-6">
       <h1>Github repositories</h1>
       <nav>
-        <ul id="js-pagination" class="pagination">
+        <ul class="pagination" id="js-pagination">
         </ul>
       </nav>
 
