--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -22,6 +22,6 @@
       <div class="list-group" id="js-repository-list"></div>
   </div>
 </div>
-<script src="scripts/app.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
