--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -13,14 +13,17 @@
 
 <div id="js-app">
     <div class="col-xs-6">
-      <h1>Github repositories</h1>
-      <nav>
-        <ul class="pagination" id="js-pagination">
-        </ul>
-      </nav>
-
-      <div class="list-group" id="js-repository-list"></div>
-  </div>
+      <div id="js-repository-list-page">
+        <h1>Github repositories</h1>
+        <nav>
+          <ul class="pagination" id="js-pagination">
+          </ul>
+        </nav>
+  
+        <div class="list-group" id="js-repository-list"></div>
+      </div>
+      <div id="js-repository-details-page" class="hide"></div>
+    </div>
 </div>
 <script src="dist/bundle.js"></script>
 </body>
