--- a/vanillajs/index.html
+++ b/vanillajs/index.html
@@ -11,20 +11,20 @@
 </head>
 <body>
 
-<div id="js-app">
-    <div class="col-xs-6">
-      <div id="js-repository-list-page">
-        <h1>Github repositories</h1>
-        <nav>
-          <ul class="pagination" id="js-pagination">
-          </ul>
-        </nav>
-  
-        <div class="list-group" id="js-repository-list"></div>
+  <div id="js-app">
+      <div class="col">
+        <section id="js-repository-list-page">
+          <h1>Github repositories</h1>
+          <nav>
+            <ul class="pagination" id="js-pagination">
+            </ul>
+          </nav>
+
+          <div class="list-group" id="js-repository-list"></div>
+        </section>
+        <section id="js-repository-details-page" class="hide"></section>
       </div>
-      <div id="js-repository-details-page" class="hide"></div>
-    </div>
-</div>
-<script src="dist/bundle.js"></script>
+  </div>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
